feat: initial structure

--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
   <h3>Tecnologias:</h3>
   <p> - JavaScript</p>
   <p> - HTML</p>
+
+  <div id=""></div>
+
 </body>
+  <script src="/src/libs/phaser-min.js"></script>
+  <script src="src/scripts/states/Game.js"></script>
+  <script src="src/scripts/app.js"></script>
 </html> 
