--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
   <title>Game Frogger</title>
 </head>
 <body>
-  <h1>Project Academic - 2025 </h1>
-  <h2>Game Frogger</h2>
-  <h3>Tecnologias:</h3>
-  <p> - JavaScript</p>
-  <p> - HTML</p>
 
-  <div id=""></div>
+  <div id="game-container"></div>
 
 </body>
-  <script src="/src/libs/phaser-min.js"></script>
+  <script src="src/libs/phaser-min.js"></script>
+  
   <script src="src/scripts/states/Game.js"></script>
+  <script src="src/scripts/states/Play.js"></script>
+  <script src="src/scripts/states/Menu.js"></script>
+  <script src="src/scripts/states/Preload.js"></script>
+  <script src="src/scripts/states/Splash.js"></script>
+  <script src="src/scripts/states/Boot.js"></script>
   <script src="src/scripts/app.js"></script>
 </html> 
