adds `player` collision with elements

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </body>
   <script src="src/libs/phaser-min.js"></script>
   
+  <script src="src/scripts/states/GameOver.js"></script>
   <script src="src/scripts/states/Game.js"></script>
+  <script src="src/scripts/states/Score.js"></script>
   <script src="src/scripts/states/Play.js"></script>
   <script src="src/scripts/states/Menu.js"></script>
   <script src="src/scripts/states/Preload.js"></script>
